--- a/test/fixtures/root.expected.css
+++ b/test/fixtures/root.expected.css
@@ -1,10 +1,10 @@
-::-webkit-runnable-track {
-    -webkit-appearance: none !important;
+::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
     background: #9d9d9d;
     height: 3px
 }
 ::-moz-range-track {
-    -moz-appearance: none !important;
+    -moz-appearance: none;
     background: #9d9d9d;
     height: 3px
 }
