add moz outline fix

--- a/test/fixtures/mixed.expected.css
+++ b/test/fixtures/mixed.expected.css
@@ -12,6 +12,9 @@ input[type="range"]::-ms-thumb {
 input[type="range"] {
   -webkit-appearance: none;
 }
+input[type="range"]::-moz-focus-outer {
+  border: 0;
+}
 .foo {
   background: blue;
 }
