--- a/test/fixtures/range-thumb.expected.css
+++ b/test/fixtures/range-thumb.expected.css
@@ -3,21 +3,24 @@ input[type="range"]::-webkit-slider-thumb {
     background: #4286be;
     width: 16px;
     height: 8px;
-    border-radius: 999px;
+    border-radius: 999px
 }
 input[type="range"]::-moz-range-thumb {
     -moz-appearance: none;
     background: #4286be;
     width: 16px;
     height: 8px;
-    border-radius: 999px;
+    border-radius: 999px
 }
 input[type="range"]::-ms-thumb {
     background: #4286be;
     width: 16px;
     height: 8px;
-    border-radius: 999px;
+    border-radius: 999px
 }
 input[type="range"] {
-    -webkit-appearance: none;
+    -webkit-appearance: none
+}
+input[type="range"]::-moz-focus-outer {
+    border: 0
 }
