--- a/test/fixtures/range-track.expected.css
+++ b/test/fixtures/range-track.expected.css
@@ -1,17 +1,20 @@
 input[type="range"]::-webkit-slider-runnable-track {
     -webkit-appearance: none;
     background: #9d9d9d;
-    height: 3px;
+    height: 3px
 }
 input[type="range"]::-moz-range-track {
     -moz-appearance: none;
     background: #9d9d9d;
-    height: 3px;
+    height: 3px
 }
 input[type="range"]::-ms-track {
     background: #9d9d9d;
-    height: 3px;
+    height: 3px
 }
 input[type="range"] {
-    -webkit-appearance: none;
+    -webkit-appearance: none
+}
+input[type="range"]::-moz-focus-outer {
+    border: 0
 }
