--- a/test/fixtures/root.expected.css
+++ b/test/fixtures/root.expected.css
@@ -12,3 +12,9 @@
     background: #9d9d9d;
     height: 3px
 }
+input[type="range"] {
+    -webkit-appearance: none
+}
+input[type="range"]::-moz-focus-outer {
+    border: 0
+}
