--- a/test/fixtures/root.expected.css
+++ b/test/fixtures/root.expected.css
@@ -1,20 +1,20 @@
 ::-webkit-slider-runnable-track {
-    -webkit-appearance: none;
-    background: #9d9d9d;
-    height: 3px
+  -webkit-appearance: none;
+  background: #9d9d9d;
+  height: 3px;
 }
 ::-moz-range-track {
-    -moz-appearance: none;
-    background: #9d9d9d;
-    height: 3px
+  -moz-appearance: none;
+  background: #9d9d9d;
+  height: 3px;
 }
 ::-ms-track {
-    background: #9d9d9d;
-    height: 3px
+  background: #9d9d9d;
+  height: 3px;
 }
 input[type="range"] {
-    -webkit-appearance: none
+  -webkit-appearance: none;
 }
 input[type="range"]::-moz-focus-outer {
-    border: 0
+  border: 0;
 }
